# PDFreader-with-MoonDreamAI

./: README.md  app.py  pyproject.toml  requirements.txt  utils.py
prompts/: prompt.md
responses/: responses.json
unit_tests/: run_tests.py  test_results.json  test_utils.py
